--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^4.0.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0"
   },
