--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.3.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
