--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express-session": "^1.17.1",
     "express-validator": "^6.4.0",
     "mongoose": "^5.9.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
